Fix workflow to use AWS_SECRET_ACCESS_KEY from secrets

--- a/.github/workflows/cortex_m_virtual_hardware.yml
+++ b/.github/workflows/cortex_m_virtual_hardware.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Execute test suite on Virtual Hardware at AWS
         env: 
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_SECRET }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
         uses: Arm-Software/VHT-AMI@v2
         with:
