Switched to simlimit to speed up simulation

--- a/vht/vht.yml
+++ b/vht/vht.yml
@@ -15,6 +15,6 @@ suite:
   tests:
    - "aws mqtt example":
       executable: "./Objects/image.axf"
-      arguments: "-C fvp_mps2.mps2_visualisation.disable-visualisation=1 -C fvp_mps2.telnetterminal0.start_telnet=0 -C fvp_mps2.UART0.out_file=- --cyclelimit 1000000000"
+      arguments: "-C fvp_mps2.mps2_visualisation.disable-visualisation=1 -C fvp_mps2.telnetterminal0.start_telnet=0 -C fvp_mps2.UART0.out_file=- --simlimit 20"
       pre: ""
       post: ""
