--- a/.github/workflows/cortex_m_virtual_hardware.yml
+++ b/.github/workflows/cortex_m_virtual_hardware.yml
@@ -1,52 +1,70 @@
+# The repository needs to provide the following secrets
+# - AWS_ACCESS_KEY_ID           The id of the access key.
+# - AWS_SECRET_ACCESS_KEY       The access key secret.
+# - AWS_DEFAULT_REGION          The data center region to be used.
+# - AWS_S3_BUCKET_NAME          The name of the S3 storage bucket to be used for data exchange.
+# - AWS_IAM_PROFILE             The IAM profile to be used.
+# - AWS_SECURITY_GROUP_ID       The id of the security group to add the EC2 instance to.
+# - AWS_SUBNET_ID               The id of the network subnet to connect the EC2 instance to.
+
 name: Cortex-M7 Arm Virtual Hardware
 
-# https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#onschedule
 on:
   push:
   pull_request:
   workflow_dispatch:
 
+env:
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+  AWS_S3_BUCKET_NAME: ${{ secrets.AWS_S3_BUCKET_NAME }}
+  AWS_IAM_PROFILE: ${{ secrets.AWS_IAM_PROFILE }}
+  AWS_SECURITY_GROUP_ID: ${{ secrets.AWS_SECURITY_GROUP_ID }}
+  AWS_SUBNET_ID: ${{ secrets.AWS_SUBNET_ID }}
+  
 jobs:
   cortex_m_generic:
     runs-on: ubuntu-latest
       
     name: Cortex-M7 Virtual Hardware Target
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2    
-      
-      - name: Prepare test suite
-        env: 
-          MQTT_BROKER_ENDPOINT: ${{ secrets.MQTT_BROKER_ENDPOINT }}
-          IOT_THING_NAME: ${{ secrets.IOT_THING_NAME }}
-          CLIENT_CERTIFICATE_PEM: ${{ secrets.CLIENT_CERTIFICATE_PEM }}
-          CLIENT_PRIVATE_KEY_PEM: ${{ secrets.CLIENT_PRIVATE_KEY_PEM }}
-        run: |
-          rsync -rR . ./vht
-          cd vht/amazon-freertos/demos/include
-          envsubst <aws_clientcredential.h.in >aws_clientcredential.h
-          envsubst <aws_clientcredential_keys.h.in >aws_clientcredential_keys.h
-          
-      - name: Execute test suite on Virtual Hardware at AWS
-        env: 
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-        uses: Arm-Software/VHT-AMI@v2
-        with:
-          vht_in: ./vht
-          s3_bucket_name:  ${{ secrets.AWS_S3_BUCKET_NAME }}
-          ec2_instance_type: t2.xlarge
-          ec2_security_group_id: ${{ secrets.AWS_SECURITY_GROUP_ID }}
-          iam_profile: ${{ secrets.AWS_IAM_PROFILE }}
-          subnet_id: ${{ secrets.AWS_SUBNET_ID }}
-          terminate_ec2_instance: 'true'
-          vht_ami_version: '1.1.0'
-                    
-      - name: Fetch results from VHT
-        run: |
-          tar xvzf out.tar
-          cat ./home/ubuntu/vhtwork/out/image.axf.stdio
-          grep -il "Incoming Publish Message : Hello World!" ./home/ubuntu/vhtwork/out/image.axf.stdio
-          
-    
+    - name: Checkout
+      uses: actions/checkout@v2    
+  
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
+        
+    - name: Install AVH Client for Python
+      run: |
+        pip install git+https://github.com/ARM-software/avhclient.git@v0.1
+
+    - name: Prepare test suite
+      env: 
+        MQTT_BROKER_ENDPOINT: ${{ secrets.MQTT_BROKER_ENDPOINT }}
+        IOT_THING_NAME: ${{ secrets.IOT_THING_NAME }}
+        CLIENT_CERTIFICATE_PEM: ${{ secrets.CLIENT_CERTIFICATE_PEM }}
+        CLIENT_PRIVATE_KEY_PEM: ${{ secrets.CLIENT_PRIVATE_KEY_PEM }}
+      run: |
+        cd amazon-freertos/demos/include
+        envsubst <aws_clientcredential.h.in >aws_clientcredential.h
+        envsubst <aws_clientcredential_keys.h.in >aws_clientcredential_keys.h
+
+    - uses: ammaraskar/gcc-problem-matcher@master
+
+    - name: Run tests
+      id: avh
+      run: |
+        avhclient -b aws execute --specfile avh.yml
+
+    - name: Archive results
+      uses: actions/upload-artifact@v2
+      with:
+        name: results
+        path: |
+          aws_mqtt-cm7-*.zip
+        retention-days: 1
+        if-no-files-found: error
+      if: always()
