Added console output to artifacts, mdk config file and updated Readme.

--- a/.github/workflows/cortex_m_virtual_hardware.yml
+++ b/.github/workflows/cortex_m_virtual_hardware.yml
@@ -65,6 +65,7 @@ jobs:
         name: results
         path: |
           aws_mqtt-cm7-*.zip
+          console-out-*.log
         retention-days: 1
         if-no-files-found: error
       if: always()
